working base search

--- a/index.html
+++ b/index.html
@@ -17,7 +17,31 @@
 
 </head>
 <body>
-	
+	<header><h1>Pr0j3ct $ive</h1></header>
+	<form id="search">
+		<input type="submit" id="searchSubmit">
+		<input type="text" name="search" id="searchbar"><br>
+		<input type="radio" name="searchType" value="movie" checked>Movie
+		<input type="radio" name="searchType" value="tv">TV
+		<input type="radio" name="searchType" value="sports">sports
+	</form>
+	<div id="container">
+	<table class="table table-striped">
+  <thead>
+    <tr>
+    	<th scope="col"></th>
+      <th scope="col">Title</th>
+      <th scope="col">Description</th>
+      <th scope="col">Add to list</th>
+    </tr>
+  </thead>
+  	<tbody id="resultTable">
+
+
+   </tbody>
+</table>
+</div>
+
 	
 
 	
