--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
 	<header><h1>Pr0j3ct $ive</h1></header>
 	<form id="search">
-		<input type="submit" id="searchSubmit">
-		<input type="text" name="search" id="searchbar"><br>
+		<input type="text" name="search" id="searchbar">
+		<input type="submit" id="searchSubmit"><br>
 		<input type="radio" name="searchType" value="movie" checked>Movie
 		<input type="radio" name="searchType" value="tv">TV
 		<input type="radio" name="searchType" value="sports">sports
