--- a/index.html
+++ b/index.html
@@ -16,7 +16,67 @@
 </head>
 <body>
 	<header><h1 class="text-center">Pr0j3ct $ive</h1></header>
-	
+	<div class="text-center" id="register">  
+		<div id="registerButton">
+			<button class="btn-info" data-toggle="modal" data-target="#loginmodal" >Log In </button>
+	 </div>
+	</div>
+<form id="search" >
+		<input type="text" name="search" id="searchbar">
+		<input type="submit" id="searchSubmit" onclick="location.href='search.html'"><br>
+		<input type="radio" name="searchType" value="movie" checked>Movie
+		<input type="radio" name="searchType" value="tv">TV
+		<input type="radio" name="searchType" value="sports">sports
+	</form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div id="loginmodal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Login</h4>
+         <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <form>
+  		<div class="form-group">
+  			<label for="exampleInputEmail1">Email address</label>
+    		<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    		<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  		</div>
+  		<div class="form-group">
+    		<label for="exampleInputPassword1">Password</label>
+    		<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  		</div>
+  		<div class="form-check">
+    		<label class="form-check-label">
+      		<input type="checkbox" class="form-check-input">
+      		Remeber me
+    		</label>
+  			</div>
+  		<button type="submit" class="btn btn-info">Submit</button>
+</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 
 
 
