--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
         <form id="registerForm">
   		<div class="form-group">
   			<label for="emailInput">Email address</label>
-    		<input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Enter email">
+    		<input type="email" class="form-control" id="emailReg" aria-describedby="emailHelp" placeholder="Enter email">
     		<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   		</div>
   		<div class="form-group">
     		<label for="passwordInput">Password</label>
-    		<input type="password" class="form-control" id="passwordInput" placeholder="Password">
+    		<input type="password" class="form-control" id="passwordReg" placeholder="Password">
   		</div>
   		<button type="submit" class="btn btn-info" id="registersubmit">Submit</button>
 </form>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer" id="regFoot">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
