chat and profile page start

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
       <div class="modal-body">
-        <form>
+        <form id="logIn">
   		<div class="form-group">
   			<label for="emailInput">Email address</label>
     		<input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Enter email">
