--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 			<button class="btn-info" data-toggle="modal" data-target="#registermodal" >Register </button>
 	 </div>
 	</div>
+  <br>
+  <br>
+
 <form id="search" action="search.html" >
 		<input type="text" name="search" id="searchbar">
 		<input type="submit" id="searchSubmit" ><br>
 		<input type="radio" name="searchType" value="movie" checked>Movie
-		<input type="radio" name="searchType" value="tv">TV
-		<input type="radio" name="searchType" value="sports">sports
+		<input type="radio" name="searchType" value="tv">Television
 	</form>
 
 
@@ -65,7 +67,7 @@
   		<div class="form-check">
     		<label class="form-check-label">
       		<input type="checkbox" class="form-check-input">
-      		Remeber me
+      		Remember me
     		</label>
   			</div>
   		<button type="submit" class="btn btn-info" id="loginsubmit">Submit</button>
