--- a/search.html
+++ b/search.html
@@ -22,8 +22,7 @@
 		<input type="text" name="search" id="searchbar">
 		<input type="submit" id="searchSubmit"><br>
 		<input type="radio" name="searchType" value="movie" checked>Movie
-		<input type="radio" name="searchType" value="tv">TV
-		<input type="radio" name="searchType" value="sports">sports
+		<input type="radio" name="searchType" value="tv">Television
 	</form>
 	<div id="container">
 	<table class="table table-striped">
