--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 		<header><h1 class="text-center">Pr0j3ct $ive</h1></header>
-
+<div class="container">
 <div class="row">
 	<div class="col-lg-12">
 		top bar
@@ -27,7 +27,26 @@
 </div>
 <div class="row">
 	<div class="col-lg-8">
-		things
+		<div class="jumbotron">
+  			<h3>On Air Tonight</h3>
+
+  			<table class="table table-striped">
+  				<thead>
+    				<tr>
+      				<th scope="col">Title</th>
+      				<th scope="col">Time</th>
+      				<th scope="col">Channel</th>
+      				<th scope="col">Description</th>
+    				</tr>
+  				</thead>
+  			</table>
+  			
+		</div>
+
+		<div id="followingShows">
+			<h3>Shows Following:</h3>
+
+		</div>
 	</div>
 	<form id="chat">
 	<div class="col-lg-4">
@@ -43,6 +62,9 @@
   		</div>
 	</div>
 	</form>
+
+</div>
+
 
 </div>
 	
