--- a/search.html
+++ b/search.html
@@ -10,6 +10,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./assets/javascript/app.js"></script>
+    <script type="text/javascript" src="./assets/javascript/firebase.js"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-auth.js"></script>
@@ -18,6 +19,10 @@
 </head>
 <body>
 	<header><h1>Pr0j3ct $ive</h1></header>
+	<button class="btn-info" data-toggle="modal" data-target="#loginmodal" >Log In </button> 
+	<button class="btn-info" data-toggle="modal" data-target="#registermodal" >Register </button>
+	<button class="btn-warning" id="logOut">logout</button>
+
 	<form id="search">
 		<input type="text" name="search" id="searchbar">
 		<input type="submit" id="searchSubmit"><br>
@@ -43,6 +48,68 @@
 
 	
 
+<div id="loginmodal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Login</h4>
+         <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <form id="logIn">
+  		<div class="form-group">
+  			<label for="emailInput">Email address</label>
+    		<input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Enter email">
+    		<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  		</div>
+  		<div class="form-group">
+    		<label for="passwordInput">Password</label>
+    		<input type="password" class="form-control" id="passwordInput" placeholder="Password">
+  		</div>
+  		<div class="form-check">
+    		<label class="form-check-label">
+      		<input type="checkbox" class="form-check-input">
+      		Remember me
+    		</label>
+  			</div>
+  		<button type="submit" class="btn btn-info" id="loginsubmit">Submit</button>
+</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+<div id="registermodal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Register</h4>
+         <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <form id="registerForm">
+  		<div class="form-group">
+  			<label for="emailInput">Email address</label>
+    		<input type="email" class="form-control" id="emailReg" aria-describedby="emailHelp" placeholder="Enter email">
+    		<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  		</div>
+  		<div class="form-group">
+    		<label for="passwordInput">Password</label>
+    		<input type="password" class="form-control" id="passwordReg" placeholder="Password">
+  		</div>
+  		<button type="submit" class="btn btn-info" id="registersubmit">Submit</button>
+</form>
+      </div>
+      <div class="modal-footer" id="regFoot">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 	
 </body>
 </html>
