--- a/profile.html
+++ b/profile.html
@@ -20,11 +20,24 @@
 <body>
 		<header><h1 class="text-center">Pr0j3ct $ive</h1></header>
 <div class="container">
-<div class="row">
-	<div class="col-lg-12">
-		top bar
-	</div>
-</div>
+	<div class="row">
+      <div class="col md-4 offset-md-4" id="navButtons">
+        <form action="">
+        <button class="btn-info" type="submit" formaction="index.html">Home </button> 
+        <button class="btn-info" type="submit" formaction="search.html">Search </button>
+        <button class="btn-info" type="submit" formaction="profile.html">Profile</button>
+        </form>
+      </div>
+
+
+      <div class="col md-4" id="loginlogout">
+	     <button class="btn-info" data-toggle="modal" data-target="#loginmodal" >Log In </button> 
+	     <button class="btn-info" data-toggle="modal" data-target="#registermodal" >Register </button>
+	     <button class="btn-warning" id="logOut">logout</button>
+      </div>
+
+    </div>
+    <br>
 <div class="row">
 	<div class="col-lg-8">
 		<div class="jumbotron">
