--- a/profile.html
+++ b/profile.html
@@ -84,5 +84,69 @@
 
 </div>
 	
+
+
+	<div id="loginmodal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Login</h4>
+         <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <form id="logIn">
+  		<div class="form-group">
+  			<label for="emailInput">Email address</label>
+    		<input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Enter email">
+    		<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  		</div>
+  		<div class="form-group">
+    		<label for="passwordInput">Password</label>
+    		<input type="password" class="form-control" id="passwordInput" placeholder="Password">
+  		</div>
+  		<div class="form-check">
+    		<label class="form-check-label">
+      		<input type="checkbox" class="form-check-input">
+      		Remember me
+    		</label>
+  			</div>
+  		<button type="submit" class="btn btn-info" id="loginsubmit">Submit</button>
+</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+<div id="registermodal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Register</h4>
+         <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <form id="registerForm">
+  		<div class="form-group">
+  			<label for="emailInput">Email address</label>
+    		<input type="email" class="form-control" id="emailReg" aria-describedby="emailHelp" placeholder="Enter email">
+    		<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  		</div>
+  		<div class="form-group">
+    		<label for="passwordInput">Password</label>
+    		<input type="password" class="form-control" id="passwordReg" placeholder="Password">
+  		</div>
+  		<button type="submit" class="btn btn-info" id="registersubmit">Submit</button>
+</form>
+      </div>
+      <div class="modal-footer" id="regFoot">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>	
 </body>
 </html>
