--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
 		<div id="registerButton">
 			<button class="btn-info" data-toggle="modal" data-target="#loginmodal" >Log In </button> 
 			<button class="btn-info" data-toggle="modal" data-target="#registermodal" >Register </button>
+			<button class="btn-info" type="submit" href="profile.html">Profile</button>
 	 </div>
 	</div>
   <br>
   <br>
 
-<form id="search" action="search.html" >
+<form id="searchz" action="search.html" method="get">
 		<input type="text" name="search" id="searchbar">
-		<input type="submit" id="searchSubmit" ><br>
+		<input type="submit" value="submit" id="searchSubmitz" ><br>
 		<input type="radio" name="searchType" value="movie" checked>Movie
 		<input type="radio" name="searchType" value="tv">Television
 	</form>
