--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,6 @@
 	<title>My Profile</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 	<script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
@@ -15,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-auth.js"></script>
+    	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
 </head>
 <body>
@@ -42,8 +42,10 @@
 	<div class="col-lg-8">
 		<div class="jumbotron">
   			<h3>On Air Tonight</h3>
-
-  			<table class="table table-striped">
+			<div id="airDump">
+				
+			</div>
+  			<!-- <table class="table table-striped">
   				<thead>
     				<tr>
       				<th scope="col">Title</th>
@@ -52,7 +54,7 @@
       				<th scope="col">Description</th>
     				</tr>
   				</thead>
-  			</table>
+  			</table> -->
   			
 		</div>
 
