--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="registerButton">
 			<button class="btn-info" data-toggle="modal" data-target="#loginmodal" >Log In </button> 
 			<button class="btn-info" data-toggle="modal" data-target="#registermodal" >Register </button>
-			<button class="btn-info" type="submit" href="profile.html">Profile</button>
+      <button class="btn-info" onclick="window.location.href='profile.html'">Profile</button>
 	 </div>
 	</div>
   <br>
