--- a/profile.html
+++ b/profile.html
@@ -59,7 +59,7 @@
 		</div>
 
 		<div id="followingShows">
-			<h3>Shows Following:</h3>
+			<h3>Watch List:</h3>
 			<div id="profileDump">
 				
 			</div>
