--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,12 @@
 		<header><h1 class="text-center">Pr0j3ct $ive</h1></header>
 <div class="container">
 	<div class="row">
-      <div class="col md-4 offset-md-4" id="navButtons">
+    <div class="col-md-4">
+      <div id="email">
+      </div>
+      
+    </div>
+      <div class="col md-4" id="navButtons">
         <form action="">
         <button class="btn-info" type="submit" formaction="index.html">Home </button> 
         <button class="btn-info" type="submit" formaction="search.html">Search </button>
@@ -70,7 +75,7 @@
 	<div class="col-lg-4">
 		<div id="chatWindow">
 			<div id="messagesDiv">
-			t
+			
 		</div>
 		</div>
 		<div>
