--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,10 @@
 <div class="container">
 	<div class="row">
     <div class="col-md-4">
-      <div id="email">
+      <div id="emailShow">
+      </div>
+       <div id="creep">
+        
       </div>
       
     </div>
