--- a/search.html
+++ b/search.html
@@ -21,7 +21,15 @@
 	<header><h1>Pr0j3ct $ive</h1></header>
   <div class="container">
     <div class="row">
-      <div class="col md-4 offset-md-4" id="navButtons">
+    <div class="col-md-4">
+      <div id="emailShow">
+      </div>
+      <div id="creep">
+        
+      </div>
+      
+    </div>
+      <div class="col md-4" id="navButtons">
         <form action="">
         <button class="btn-info" type="submit" formaction="index.html">Home </button> 
         <button class="btn-info" type="submit" formaction="search.html">Search </button>
@@ -118,7 +126,7 @@
     		<label for="passwordInput">Password</label>
     		<input type="password" class="form-control" id="passwordReg" placeholder="Password">
   		</div>
-  		<button type="submit" class="btn btn-info" id="registersubmit">Submit</button>
+  		<button type="submit" class="btn btn-info" id="registersubmit" data-dismiss="modal">Submit</button>
 </form>
       </div>
       <div class="modal-footer" id="regFoot">
